--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tether",
+  "name": "tether-move-disable",
   "version": "1.1.0",
-  "description": "A client-side library to make absolutely positioned elements attach to elements in the page efficiently.",
+  "description": "A client-side library to make absolutely positioned elements attach to elements in the page efficiently. This is for companies who firewalls git, please don't start I know.",
   "authors": [
     "Zack Bloom <zackbloom@gmail.com>",
     "Adam Schwartz <adam.flynn.schwartz@gmail.com>"
